[gd_scene load_steps=30 format=3 uid="uid://crsud8w51n07n"]

[ext_resource type="Script" uid="uid://clmu40irhh5w0" path="res://scripts/level_entities/NeutralCharacter.gd" id="1_h86cx"]
[ext_resource type="Material" uid="uid://c7htollnbbtij" path="res://resources/Materials_Shaders/cloak_material_CENTER.tres" id="3_a5e8g"]
[ext_resource type="Texture2D" uid="uid://biixbk5sucnfs" path="res://assets/textures/ships/ship_sprites.png" id="3_l33it"]
[ext_resource type="Shader" uid="uid://bnwbddeenbtd8" path="res://resources/Materials_Shaders/cloak_CENTER.gdshader" id="3_scpag"]
[ext_resource type="PackedScene" uid="uid://t8ejhfca8ulm" path="res://scenes/level_entities/enemyShield.tscn" id="4_a5e8g"]
[ext_resource type="Shader" uid="uid://bxs62v6ygtxwj" path="res://resources/Materials_Shaders/solid_fill.gdshader" id="4_scpag"]
[ext_resource type="Shader" uid="uid://4tscqvcb6xm3" path="res://resources/Materials_Shaders/shield.gdshader" id="5_s85ir"]
[ext_resource type="Texture2D" uid="uid://duvs6uixemkbt" path="res://assets/textures/ships/hull_explosion.png" id="5_scpag"]
[ext_resource type="AudioStream" uid="uid://ns0cjj8n37hn" path="res://assets/audio/smallexplosion3.ogg" id="6_o4ahg"]
[ext_resource type="AudioStream" uid="uid://dbmkhj2s41sr2" path="res://assets/audio/ship_idle.ogg" id="7_ljjbr"]
[ext_resource type="AudioStream" uid="uid://ckky6ej2wn5oc" path="res://assets/audio/weapons/torpedo_light.ogg" id="8_71til"]
[ext_resource type="AudioStream" uid="uid://0oa411kw2o1a" path="res://assets/audio/weapons/torpedo_heavy.ogg" id="9_8sljv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lot0p"]
atlas = ExtResource("3_l33it")
region = Rect2(288, 144, 48, 48)
filter_clip = true

[sub_resource type="Animation" id="Animation_a5e8g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Shield:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.475, 2.475)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:material:shader")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_scpag")]
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l33it"]
resource_local_to_scene = true
shader = ExtResource("4_scpag")
shader_parameter/fill_color = Color(0.01, 0.01, 0.01, 0.5)
shader_parameter/fill_amount = 1.0

[sub_resource type="Animation" id="Animation_l33it"]
resource_name = "cloak"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.2, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Shield:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_a5e8g")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("ShaderMaterial_l33it")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_scpag"]
resource_name = "uncloak"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Shield:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.25, 2.25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:material:shader_parameter/progress")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.01, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.8, 0.2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:material:shader")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_scpag")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o4ahg"]
_data = {
&"RESET": SubResource("Animation_a5e8g"),
&"cloak": SubResource("Animation_l33it"),
&"uncloak": SubResource("Animation_scpag")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_6mg26"]
atlas = ExtResource("5_scpag")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuf0l"]
atlas = ExtResource("5_scpag")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vtdy"]
atlas = ExtResource("5_scpag")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvyc4"]
atlas = ExtResource("5_scpag")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0xjd"]
atlas = ExtResource("5_scpag")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wsqo"]
atlas = ExtResource("5_scpag")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ockmo"]
atlas = ExtResource("5_scpag")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni8fx"]
atlas = ExtResource("5_scpag")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8g7t"]
atlas = ExtResource("5_scpag")
region = Rect2(512, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mwxxd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mg26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuf0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vtdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvyc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0xjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wsqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ockmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni8fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8g7t")
}],
"loop": false,
"name": &"explode",
"speed": 15.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ksrv6"]
shader = ExtResource("5_s85ir")
shader_parameter/color = Color(0.4, 0.705882, 0.980392, 1)

[node name="NeutralCharacter" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(2.475, 2.475)
collision_layer = 4
script = ExtResource("1_h86cx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_lot0p")
region_rect = Rect2(144, 144, 144, 144)

[node name="CloakAnimation" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_o4ahg")
}

[node name="WorldCollisionShape" type="CollisionPolygon2D" parent="." groups=["enemy"]]

[node name="hitbox_area" type="Area2D" parent="." groups=["enemy_hitbox"]]
collision_layer = 128
collision_mask = 256

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox_area"]

[node name="hull_explosion" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_mwxxd")
animation = &"explode"

[node name="Shield" parent="." instance=ExtResource("4_a5e8g")]
modulate = Color(1, 1, 1, 0)
material = SubResource("ShaderMaterial_ksrv6")
scale = Vector2(2.5, 2.5)

[node name="Sounds" type="Node" parent="."]

[node name="TorpedoHit" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("6_o4ahg")
volume_db = -18.0
pitch_scale = 2.0
max_distance = 3000.0
attenuation = 0.615573

[node name="ship_idle" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("7_ljjbr")
volume_db = -25.0
max_distance = 3000.0
attenuation = 0.615573

[node name="ship_explosion" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("6_o4ahg")
volume_db = -4.0
max_distance = 3000.0
attenuation = 0.615573

[node name="LightTorpedo" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("8_71til")
volume_db = -20.0
max_distance = 3000.0
attenuation = 0.615573
panning_strength = 2.0

[node name="HeavyTorpedo" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("9_8sljv")
volume_db = -10.0
max_distance = 3000.0
attenuation = 0.615573

[node name="Hitmarkers" type="Node" parent="."]
